--- a/src/css/rezon.form.css
+++ b/src/css/rezon.form.css
@@ -8,5 +8,11 @@
 	bottom : 10px;
 	top: 10px;
 	right : 10px;
-
+	margin-right: 20px;
+}
+.style3{
+	border:none;
+	border-top:none;
+	padding: 10px;
+	align: left;
 }
