--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -753,6 +753,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link {
 {
     position: relative;
     clear: both;
+    cursor: pointer;
 }
 #rezon-forms .select-age 
 {
@@ -1610,14 +1611,14 @@ body > div.datepicker
     height: 19px;
     opacity: .3;
     cursor: pointer;
-    background: url(../img/icon-arrow-down.gif) no-repeat center center;
+    /*background: url(../img/icon-arrow-down.gif) no-repeat center center;*/
     top: 50%;
     margin-top: -9px;
     z-index: 1;
 }
 #rezon-forms .typeahead-selectpicker-control.opened 
 {
-    background: url(../img/icon-arrow-up.gif) no-repeat center center;
+    /*background: url(../img/icon-arrow-up.gif) no-repeat center center;*/
     opacity: 1;
 }
 #rezon-forms .typeahead-selectpicker-control.empty 
@@ -1719,7 +1720,6 @@ body > div.datepicker
     border-radius: 4px;
     color: white;
     text-align: center;
-    cursor: pointer;
 }
 #rezon-forms .transp:hover 
 {
@@ -1730,6 +1730,11 @@ body > div.datepicker
 #rezon-forms .transp a:visited span 
 {
     color: #fff;
+}
+
+#rezon-forms .transp div span,
+#rezon-forms .transp .arrow {
+    cursor: pointer;
 }
 #rezon-forms .transp a span 
 {
@@ -2052,6 +2057,14 @@ body > div.datepicker
     margin-top: 10px;
     font-size: 24px;
     cursor: pointer;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 #rezon-forms .field.pass .pass_counter a 
 {
@@ -2228,16 +2241,11 @@ body > div.datepicker
 	border: 1px solid #4bd;
 }
 
-.vdp-datepicker__calendar .cell.selected {
-	background: #4bd;
-}
-
-.vdp-datepicker__calendar .cell.selected:hover {
-	background: #4bd;
-}
-
+ .vdp-datepicker__calendar .cell.selected,
+.vdp-datepicker__calendar .cell.selected:hover,
 .vdp-datepicker__calendar .cell.selected.highlighted {
 	background: #4bd;
+    color:white;
 }
 
 .vdp-datepicker__calendar .cell.highlighted {
