--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -939,30 +939,53 @@ html[data-btb="True"] #rezon-forms .extended-form-link {
     top: 0;
     width: 50px;
 }
-#rezon-forms .error-box 
+#rezon-forms .error-box
 {
-    display: none;
     background: #e94b34;
-    color: white;    
-    padding: 0 10px 4px 10px;
+    border-radius: 2px;
+    color: white;
+    display: none;
     font-size: 13px;
     min-height: 17px;
+    padding: 5px 10px;
+    position: absolute;
+    right: 1px;
+    left: 1px;
 }
-#rezon-forms .error-box label 
+#rezon-forms .error-box .close
 {
-    color:white;
-}
-#rezon-forms .error-box .close 
-{
-    width: 20px;
-    height: 20px;
-    margin-right: -5px;
-    margin-top: 1px;
+    background: none;
     float: right;
-    background-image: url(../img/delit.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 150% auto;
+    height: 20px;
+    margin: 0 -5px 0 0;
+    opacity: 0.5;
+    position: relative;
+    width: 20px;
+}
+#rezon-forms .error-box .close:before,
+#rezon-forms .error-box .close:after
+{
+    background: #fff;
+    content: "";
+    display: block;
+    position: absolute;
+    transform: rotate(45deg);
+}
+#rezon-forms .error-box .close:before
+{
+    height: 1px;
+    width: 20px;
+    top: 45%;
+}
+#rezon-forms .error-box .close:after
+{
+    height: 20px;
+    width: 1px;
+    left: 45%;
+}
+#rezon-forms .error-box .close:hover
+{
+    opacity: 0.8;
 }
 
 #rezon-forms .selectpicker-before 
@@ -1682,28 +1705,27 @@ body > div.datepicker
     line-height: 16px;
     font-size: 14px;
 }
-#rezon-forms .fields-container .swap {
+#rezon-forms .fields-container .swap
+{
+    border-radius: 20px;
+    border: 4px solid #7fd7ff;
+    background: #26b6ff;
     color: #fff;
-    position: relative;
+    cursor: pointer;
     box-sizing: content-box;
     float: left;
-    margin-bottom: 15px;
-    margin-left: -18px;
-    margin-right: -18px;
-    width: 30px;
-    height: 30px;
-    border-radius: 20px;
-    border: 3px solid #7fd7ff;
-    background: #26b6ff;
-    z-index: 2;
-    line-height: 25px;
-    transform: rotate(90deg);
-    letter-spacing: -1px;
+    margin-bottom: 13px;
+    margin-left: -21px;
+    margin-right: -20px;
+    width: 33px;
+    height: 33px;
+    line-height: 28px;
     font-size: 19px;
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
-    cursor: pointer;
+    transform: rotate(90deg);
+    z-index: 2;
 }
 #rezon-forms .fields-container.route .swap {
     display: none;
@@ -1844,7 +1866,8 @@ body > div.datepicker
     border-radius: 2px;
     height: 45px;
 }
-#rezon-forms .field .control-field > div {
+#rezon-forms .field .control-field .inside 
+{
     height: 100%;
 }
 #rezon-forms .field.time{
