--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1730,6 +1730,13 @@ body > div.datepicker
     white-space: nowrap;
     transform: rotate(90deg);
     z-index: 2;
+     -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 #rezon-forms .fields-container.route .swap {
     display: none;
