--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1,10 +1,21 @@
 ﻿@charset "utf-8";
 
-#rezon-forms .rez-forms {
+#rezon-forms
+{
+    background-image: url(../img/shell.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-color: #4a148c;
+    background-blend-mode: overlay;
+    font-size: 100%;
+    padding: 60px 20px 50px;
+}
+#rezon-forms .rez-forms 
+{
     max-width: 1200px;
     margin: 0 auto;
 }
-
 #rezon-forms a,
 #rezon-forms a:visited 
 {
@@ -54,16 +65,6 @@
 #rezon-forms button 
 {
 	font-family: 'Open Sans', sans-serif;
-}
-#rezon-forms 
-{
-    font-size: 100%;
-	background-image: url(../img/shell.png);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-    background-color: #4a148c;
-    padding: 60px 20px 50px;
 }
 .rez-forms-links 
 {
@@ -2210,6 +2211,7 @@ body > div.datepicker
 {
 	background: #fff;
 	box-shadow: 0 5px 15px 0 rgba(0,0,0,0.4);
+    border-radius: 2px;
 	position: absolute;
 	width: 300px;
 	z-index: 100;
@@ -2220,11 +2222,11 @@ body > div.datepicker
 	line-height: 40px;
 }
 
-.vdp-datepicker__calendar header .up 
+.vdp-datepicker__calendar header .up,
+.vdp-datepicker__calendar header .current
 {
-	display: block;
-	text-align: center;
     margin: 0 40px;
+    text-align: center;
 }
 .vdp-datepicker__calendar header .prev,
 .vdp-datepicker__calendar header .next
@@ -2242,32 +2244,37 @@ body > div.datepicker
     float: right;
 }
 .vdp-datepicker__calendar header .prev:after,
-.vdp-datepicker__calendar header .next:after 
+.vdp-datepicker__calendar header .next:after
 {
-	content: '';
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	border: 6px solid transparent;
+    content: '';
+    height: 15px;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: rotate(45deg);
+    width: 15px;
 }
-
-.vdp-datepicker__calendar header .prev:after {
-	border-right: 10px solid #000;
-	margin-left: -5px;
+.vdp-datepicker__calendar header .prev:after
+{
+    border-left: 1px solid #26b6ff;
+    border-bottom: 1px solid #26b6ff;
+    margin-left: -5px;
 }
-
-.vdp-datepicker__calendar header .prev.disabled:after {
-	border-right: 10px solid #ddd;
+.vdp-datepicker__calendar header .prev.disabled:after
+{
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
 }
-
-.vdp-datepicker__calendar header .next:after {
-	border-left: 10px solid #000;
-	margin-left: 5px;
+.vdp-datepicker__calendar header .next:after
+{
+    border-top: 1px solid #26b6ff;
+    border-right: 1px solid #26b6ff;
+    margin-left: -10px;
 }
-
-.vdp-datepicker__calendar header .next.disabled:after {
-	border-left: 10px solid #ddd;
+.vdp-datepicker__calendar header .next.disabled:after
+{
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 }
 
 .vdp-datepicker__calendar header .prev:not(.disabled),
@@ -2335,11 +2342,12 @@ body > div.datepicker
 .vdp-datepicker__calendar .cell.grey:hover {
 	background: inherit;
 }
-
-.vdp-datepicker__calendar .cell.day-header {
-	font-size: 75%;
-	white-space: no-wrap;
-	cursor: inherit;
+.vdp-datepicker__calendar .cell.day-header
+{
+    color: #9e9e9e;
+    cursor: inherit;
+    font-size: 75%;
+    white-space: no-wrap;
 }
 
 .vdp-datepicker__calendar .cell.day-header:hover {
