--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -219,9 +219,8 @@
     right: 40px;
 	z-index: 3;
 }
-#rezon-forms .express 
-{
-    color: #d28d16;
+#rezon-forms .express {
+    color: #7100c5;
     font-size: 9px;
     position: absolute;
     top: 30px;
