--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -2381,7 +2381,10 @@ body > div.datepicker
 {
     display: none !important;
 }
-
+#rezon-forms .pull-right
+{
+    float: right !important;
+}
 
 @media (min-width: 600px) and (max-width: 1200px) 
 {
