--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -43,7 +43,8 @@
 {
 	text-decoration: none;
 }
-#rezon-forms a.dashed:hover,#rezon-forms span.dashed:hover 
+#rezon-forms a.dashed:hover,
+#rezon-forms span.dashed:hover 
 {
 	text-decoration: none;
 }
