--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -54,7 +54,7 @@
 }
 #rezon-forms .dashed span
 {
-    border-bottom: 1px dashed rgba((255,255,255,0.4);
+    border-bottom: 1px dashed rgba(255,255,255,0.4);
 }
 #rezon-forms a span 
 {
