--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1793,18 +1793,20 @@ body > div.datepicker
     }
 #rezon-forms .arrows
 {
-    border-bottom: 2px solid #fff;
-    border-top: 2px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
+    box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 1px 0 rgba(255, 255, 255, 0.5);
     margin: 11px auto 0;
-    height: 7px;
+    height: 9px;
     position: relative;
-    width: 15px;
+    width: 13px;
 }
 #rezon-forms .arrows:before,
 #rezon-forms .arrows:after
 {
-    border-bottom: 2px solid white;
-    border-right: 2px solid white;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    box-shadow: inset -1px -1px 0 rgba(255, 255, 255, 0.5);
     content: "";
     color: white;
     display: block;
@@ -1815,14 +1817,14 @@ body > div.datepicker
 }
 #rezon-forms .arrows:before
 {
-    left: 0x;
-    top: -4px;
+    left: 0;
+    top: -3px;
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
 }
 #rezon-forms .arrows:after
 {
-    bottom: -4px;
+    bottom: -3px;
     right: 0;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
