--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -148,6 +148,52 @@
     margin: 0 0 3px 0;
     opacity: 0.5;
 	padding: 0;
+    position: relative;
+}
+#rezon-forms .link-left,
+#rezon-forms .link-right
+{
+    cursor: pointer;
+    display: none;
+    position: relative;
+}
+#rezon-forms .link-left:before 
+{
+    background: none;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    content: "";
+    display: block;
+    height: 15px;
+    margin: 0;
+    position: absolute;
+    left: 22px;
+    top: 18px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    width: 15px;
+}
+#rezon-forms .link-right:before,
+#rezon-forms .link-right:after 
+{
+    background: #fff;
+    content: "";
+    display: block;
+    height: 1px;
+    left: 14px;
+    position: absolute;
+    width: 21px;
+    top: 25px;
+}
+#rezon-forms .link-right:before 
+{
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+#rezon-forms .link-right:after 
+{
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
 }
 #rezon-forms form.unload 
 {
@@ -1704,6 +1750,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     line-height: 45px;
     margin: 0;
     padding: 0 10px;
+    position: relative;
 }
 #rezon-forms .field.carrier .carriers-finder .carrier_name .removes 
 {
@@ -2027,11 +2074,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     {
         padding-left: 25px;
     }
-    #rezon-forms .link-right,
-    #rezon-forms .link-left 
-    {
-        display: none;
-    }
     #rezon-forms .fields-container.route .multy-route 
     {
         margin-top: 30px;
@@ -2139,20 +2181,20 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     }
     #rezon-forms .field.opened .menu-title 
     {
-        height: 50px;
-        display: block;
-        line-height: 50px;
-        background: #798a9b;
+        background: #78909c;
         color: white;
-        text-align: center;
+        display: block;
         font-size: 14px;
+        height: 50px;
+        line-height: 50px;
+        opacity: 1;
+        text-align: center;
     }
     #rezon-forms .field.opened .link-left,
     #rezon-forms .field.opened .link-right 
     {
-        font-size: 32px;
-        line-height: 50px;
-        text-align: center;
+        display: block;
+        height: 50px;
         width: 50px;
     }
     #rezon-forms .field.opened .link-left 
