--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -695,14 +695,15 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     cursor: pointer;
     padding: 0 30px 0 10px;
 }
-#rezon-forms .selectpicker .options 
+#rezon-forms .selectpicker .options
 {
     background: #fff;
     box-sizing: border-box;
     border-radius: 2px;
     cursor: pointer;
     display: none;
-	left: 0;
+    flex-direction: column;
+    left: 0;
     position: absolute;
     right: 0;
     z-index: 10;
@@ -2159,10 +2160,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     {
         background: white;
     }
-    #rezon-forms .fields-container .field.opened .delete 
-    {
-        display: none;
-    }
     #rezon-forms .fields-container .field.airport.opened .twitter-typeahead,
     #rezon-forms .fields-container .field.station.opened .twitter-typeahead 
     {
@@ -2181,7 +2178,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     }
     #rezon-forms .field.opened .menu-title 
     {
-        background: #78909c;
+        background: #7e57c2;
         color: white;
         display: block;
         font-size: 14px;
@@ -2226,11 +2223,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     {
         display: none;
     }
-    #rezon-forms .fields-container .field.carrier.opened .carriers-finder-inside 
-    {
-        padding: 0 9px;
-    }
-
     #rezon-forms .fields-container .field.opened.date .date-wrapper 
     {
         position: fixed;
